# thumbor-rust

./: .gitignore  Cargo.toml  Makefile
config/: default.toml
src/: calc.rs  controller.rs  image.rs  lib.rs  main.rs  security.rs  service.rs  settings.rs  url_props.rs
src/image/: image_manipulator.rs
src/service/: image.rs
