[package]
name = "thumbor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
cargo-watch = "8.4.0"
num_cpus = "1.15.0"
opencv = "0.78.2"
reqwest = "0.11.16"
serde = "1.0.159"
