[package]
name = "thumbor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
anyhow = "1.0.70"
base64 = "0.21.0"
config = "0.13.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
num_cpus = "1.15.0"
opencv = "0.78.2"
reqwest = "0.11.16"
serde = "1.0.159"
sha1 = "0.10.5"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
cargo-watch = "8.4.0"
mockito = "1.0.2"
